--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ main {
 
 .section {
   margin-top: 5em;
-  opacity: 0;
+  opacity: 1;
   transform: translateY(20px);
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
@@ -361,8 +361,8 @@ main {
 }
 
 .project-box {
-  background-color: #fff;
-  border: 1px solid #ddd;
+  /* background-color: #df1818; */
+  border: 1px solid #000000;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
